# pipecat-dev-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
adapters/: rtvi_client_bridge.js
assets/: README.md  silero_vad_openvino_16k_named.onnx
bot/: .gitignore  README.md
bot/server/: .env.example  bot.py  pipecat_observer.py  pyproject.toml
macos/: AppIcon.icns  Info.plist
macos/shim/: system_tap.h  system_tap.m
scripts/: bundle_macos.sh  make_icons.py
src/: app.rs  clock.rs  config.rs  export.rs  main.rs  session.rs
src/analysis/: bins.rs  filter.rs  mod.rs  segmenter.rs  stats.rs  turns.rs  vad.rs
src/audio/: capture.rs  control.rs  mod.rs  system_mac.rs
src/bridge/: protocol.rs  server.rs
src/ui/: controls.rs  live_metrics.rs  mod.rs  results.rs  timeline.rs
