[package]
name = "pipecat-audio-metrics"
version = "0.1.0"
edition = "2021"
description = "Audio-level turn latency benchmarker for voice agents (Pipecat-friendly)"
license = "MIT"
repository = "https://github.com/daily-co/pipecat-mac-audio-metrics"

[dependencies]
eframe = "0.31"
egui = "0.31"
cpal = "0.15"
rtrb = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
hound = "3.5"
dirs = "5"
tungstenite = "0.21"
anyhow = "1"
chrono = "0.4"
tract-onnx = "0.23.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dev]
opt-level = 1
